samples/_failures_safe/1761720995_c47e7d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_08af3b0b.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_08af3b0b.c:176:39: error: missing terminating " character
  176 |         case TOKEN_IDENTIFIER: return "
      |                                       ^
./samples/SAFE/__tmp_08af3b0b.c:176:9: error: expected expression at end of input
  176 |         case TOKEN_IDENTIFIER: return "
      |         ^~~~
./samples/SAFE/__tmp_08af3b0b.c:176:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_08af3b0b.c:176:9: error: expected declaration or statement at end of input
